--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+africastalking==1.2.7
 alembic==1.11.1
 anyio==3.7.0
 appnope==0.1.3
@@ -23,6 +24,7 @@ clickclick==20.10.2
 colorama==0.4.6
 comm==0.1.3
 connexion==2.14.2
+contextlib2==21.6.0
 cryptography==40.0.2
 debugpy==1.6.7
 decorator==5.1.1
@@ -91,6 +93,7 @@ pandocfilters==1.5.0
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==10.1.0
 pip-review==1.3.0
 platformdirs==3.5.1
 prometheus-client==0.17.0
@@ -114,10 +117,13 @@ PyYAML==6.0
 pyzmq==25.0.2
 qtconsole==5.4.3
 QtPy==2.3.1
+reportlab==4.0.7
 requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 s3transfer==0.6.2
+schema==0.7.5
+segno==1.5.3
 Send2Trash==1.8.2
 six==1.16.0
 sniffio==1.3.0
