--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ argon2-cffi-bindings==21.2.0
 arrow==1.2.3
 asttokens==2.2.1
 attrs==23.1.0
+Authlib==1.3.0
 autopep8==2.0.2
 backcall==0.2.0
 bcrypt==4.0.1
@@ -42,6 +43,7 @@ Flask-Login==0.6.2
 Flask-Mail==0.9.1
 Flask-Migrate==4.0.4
 Flask-Mobility==1.1.0
+flask-oidc==2.1.1
 Flask-pymysql==0.2.3
 Flask-ReCaptcha==0.4.2
 Flask-SQLAlchemy==3.0.3
@@ -85,6 +87,7 @@ nest-asyncio==1.5.6
 notebook==6.5.4
 notebook_shim==0.2.3
 numpy==1.24.3
+oauthlib==3.0.1
 openpyxl==3.1.2
 overrides==7.3.1
 packaging==23.1
@@ -108,6 +111,7 @@ pycryptodome==3.18.0
 pycryptodomex==3.18.0
 Pygments==2.15.1
 PyMySQL==1.0.3
+pyOpenSSL==19.0.0
 pyrsistent==0.19.3
 python-dateutil==2.8.2
 python-json-logger==2.0.7
