--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -6,5 +6,17 @@ jobs:
      runs-on: ubuntu-latest
 
      steps:
-     - name: begin_config
-       run: echo "Beginning configuration"
+     - name: Begin Configuration
+       run: echo "Beginning configuration..."
+
+     - name: Setup Python
+       uses: actions/setup-python@v4
+       with:
+         python-version: '3.10'
+
+     - name: Install Dependencies
+       run: pip install -r requirements.txt
+       
+     - name: Run Tests
+       run: ./run_tests.sh
+       shell: bash
