--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -14,8 +14,10 @@ jobs:
        with:
          python-version: '3.10'
 
-     - name: Install Dependencies
-       run: pip install -r requirements.txt
+     - name: Install Python dependencies
+       uses: py-actions/py-dependency-install@v4
+       with:
+         path: "path/to/requirements.txt"
        
      - name: Run Tests
        run: ./run_tests.sh
