--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -17,7 +17,7 @@ jobs:
      - name: Install Python dependencies
        uses: py-actions/py-dependency-install@v4
        with:
-         path: "path/to/requirements.txt"
+         path: "requirements.txt"
        
      - name: Run Tests
        run: ./run_tests.sh
