--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -14,9 +14,14 @@ jobs:
        with:
          python-version: '3.10'
 
+     - name: Tests
+       run: pwd
+       shell: bash
+
      - name: Install Python dependencies
        uses: py-actions/py-dependency-install@v4
        with:
+         update-pip: "false"
          path: "requirements.txt"
        
      - name: Run Tests
