--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -15,7 +15,7 @@ jobs:
          python-version: '3.10'
 
      - name: Tests
-       run: pwd
+       run: ls
        shell: bash
 
      - name: Install Python dependencies
