--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -17,10 +17,6 @@ jobs:
        with:
          python-version: '3.10'
 
-     - name: Tests
-       run: ls
-       shell: bash
-
      - name: Install Python dependencies
        uses: py-actions/py-dependency-install@v4
        with:
@@ -28,5 +24,5 @@ jobs:
          path: "requirements.txt"
        
      - name: Run Tests
-       run: ./run_tests.sh
+       run: python -m unittest app/tests/test_*
        shell: bash
