--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -11,6 +11,7 @@ jobs:
         run: 
           echo "${{ secrets.SSH_PRIVATE_KEY }} > private_key && chmod 600 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${{ secrets.NANODE_USER }}@${{ secrets.HOST }} "
+          cd savannah_online_services
       
       
     
