--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -12,5 +12,4 @@ jobs:
           HOST: ${{ secrets.HOST }}
           USER: ${{ secrets.NANODE_USER }}
           KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        if: "${{ env.HOST != '' }}"
-        run: echo "::set-output name=defined::true"
+        run: echo "Hey"
