--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -12,6 +12,6 @@ jobs:
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.NANODE_USER }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        password: ${{ secrets.SSH_PASSWORD }}
         port: 22
         script: whoami
