--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -15,5 +15,5 @@ jobs:
         password: ${{ secrets.SSH_PASSWORD }}
         port: 22
         script: |
-          echo "Hello"
-          ls -al
+          cd savannah_online_services
+          git pull
