--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -17,4 +17,6 @@ jobs:
         script: |
           cd savannah_online_services
           source env/bin/activate
+          git add .
+          git commit "pycached changes"
           git pull
