--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -5,8 +5,25 @@ jobs:
   pre-config:
     name: Deploy to Linode
     runs-on: ubuntu-latest
-    
+
     steps:
+    - name: Begin Configuration
+      run: echo "Beginning configuration..."
+
+    - name: Clone repo
+      uses: actions/checkout@v3      
+
+    - name: Setup Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+
+    - name: Install Python dependencies
+      uses: py-actions/py-dependency-install@v4
+      with:
+        update-pip: "false"
+        path: "requirements.txt"
+  
     - name: SSH to Linode
       uses: appleboy/ssh-action@v1.0.3
       with:
