--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -18,5 +18,5 @@ jobs:
           cd savannah_online_services
           source env/bin/activate
           git add .
-          git commit "pycached changes"
+          git commit -m "pycached changes"
           git pull
